@@ -17,19 +17,24 @@
 package org.springframework.boot.configurationprocessor;
 
 import java.time.Duration;
+import java.util.Locale;
 
 import org.junit.jupiter.api.Test;
 
 import org.springframework.boot.configurationprocessor.metadata.ConfigurationMetadata;
 import org.springframework.boot.configurationprocessor.metadata.Metadata;
+import org.springframework.boot.configurationsample.Access;
 import org.springframework.boot.configurationsample.endpoint.CamelCaseEndpoint;
 import org.springframework.boot.configurationsample.endpoint.CustomPropertiesEndpoint;
 import org.springframework.boot.configurationsample.endpoint.DisabledEndpoint;
 import org.springframework.boot.configurationsample.endpoint.EnabledEndpoint;
+import org.springframework.boot.configurationsample.endpoint.NoAccessEndpoint;
+import org.springframework.boot.configurationsample.endpoint.ReadOnlyAccessEndpoint;
 import org.springframework.boot.configurationsample.endpoint.SimpleEndpoint;
 import org.springframework.boot.configurationsample.endpoint.SimpleEndpoint2;
 import org.springframework.boot.configurationsample.endpoint.SimpleEndpoint3;
 import org.springframework.boot.configurationsample.endpoint.SpecificEndpoint;
+import org.springframework.boot.configurationsample.endpoint.UnrestrictedAccessEndpoint;
 import org.springframework.boot.configurationsample.endpoint.incremental.IncrementalEndpoint;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -49,16 +54,18 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 		ConfigurationMetadata metadata = compile(SimpleEndpoint.class);
 		assertThat(metadata).has(Metadata.withGroup("management.endpoint.simple").fromSource(SimpleEndpoint.class));
 		assertThat(metadata).has(enabledFlag("simple", true));
+		assertThat(metadata).has(access("simple", Access.UNRESTRICTED));
 		assertThat(metadata).has(cacheTtl("simple"));
-		assertThat(metadata.getItems()).hasSize(3);
+		assertThat(metadata.getItems()).hasSize(4);
 	}
 
 	@Test
-	void disableEndpoint() {
+	void disabledEndpoint() {
 		ConfigurationMetadata metadata = compile(DisabledEndpoint.class);
 		assertThat(metadata).has(Metadata.withGroup("management.endpoint.disabled").fromSource(DisabledEndpoint.class));
 		assertThat(metadata).has(enabledFlag("disabled", false));
-		assertThat(metadata.getItems()).hasSize(2);
+		assertThat(metadata).has(access("disabled", Access.NONE));
+		assertThat(metadata.getItems()).hasSize(3);
 	}
 
 	@Test
@@ -66,7 +73,37 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 		ConfigurationMetadata metadata = compile(EnabledEndpoint.class);
 		assertThat(metadata).has(Metadata.withGroup("management.endpoint.enabled").fromSource(EnabledEndpoint.class));
 		assertThat(metadata).has(enabledFlag("enabled", true));
-		assertThat(metadata.getItems()).hasSize(2);
+		assertThat(metadata).has(access("enabled", Access.UNRESTRICTED));
+		assertThat(metadata.getItems()).hasSize(3);
+	}
+
+	@Test
+	void noAccessEndpoint() {
+		ConfigurationMetadata metadata = compile(NoAccessEndpoint.class);
+		assertThat(metadata).has(Metadata.withGroup("management.endpoint.noaccess").fromSource(NoAccessEndpoint.class));
+		assertThat(metadata).has(enabledFlag("noaccess", false));
+		assertThat(metadata).has(access("noaccess", Access.NONE));
+		assertThat(metadata.getItems()).hasSize(3);
+	}
+
+	@Test
+	void readOnlyAccessEndpoint() {
+		ConfigurationMetadata metadata = compile(ReadOnlyAccessEndpoint.class);
+		assertThat(metadata)
+			.has(Metadata.withGroup("management.endpoint.readonlyaccess").fromSource(ReadOnlyAccessEndpoint.class));
+		assertThat(metadata).has(enabledFlag("readonlyaccess", true));
+		assertThat(metadata).has(access("readonlyaccess", Access.READ_ONLY));
+		assertThat(metadata.getItems()).hasSize(3);
+	}
+
+	@Test
+	void unrestrictedAccessEndpoint() {
+		ConfigurationMetadata metadata = compile(UnrestrictedAccessEndpoint.class);
+		assertThat(metadata).has(Metadata.withGroup("management.endpoint.unrestrictedaccess")
+			.fromSource(UnrestrictedAccessEndpoint.class));
+		assertThat(metadata).has(enabledFlag("unrestrictedaccess", true));
+		assertThat(metadata).has(access("unrestrictedaccess", Access.UNRESTRICTED));
+		assertThat(metadata.getItems()).hasSize(3);
 	}
 
 	@Test
@@ -78,8 +115,9 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 			.ofType(String.class)
 			.withDefaultValue("test"));
 		assertThat(metadata).has(enabledFlag("customprops", true));
+		assertThat(metadata).has(access("customprops", Access.UNRESTRICTED));
 		assertThat(metadata).has(cacheTtl("customprops"));
-		assertThat(metadata.getItems()).hasSize(4);
+		assertThat(metadata.getItems()).hasSize(5);
 	}
 
 	@Test
@@ -87,8 +125,9 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 		ConfigurationMetadata metadata = compile(SpecificEndpoint.class);
 		assertThat(metadata).has(Metadata.withGroup("management.endpoint.specific").fromSource(SpecificEndpoint.class));
 		assertThat(metadata).has(enabledFlag("specific", true));
+		assertThat(metadata).has(access("specific", Access.UNRESTRICTED));
 		assertThat(metadata).has(cacheTtl("specific"));
-		assertThat(metadata.getItems()).hasSize(3);
+		assertThat(metadata.getItems()).hasSize(4);
 	}
 
 	@Test
@@ -97,7 +136,8 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 		assertThat(metadata)
 			.has(Metadata.withGroup("management.endpoint.pascal-case").fromSource(CamelCaseEndpoint.class));
 		assertThat(metadata).has(enabledFlag("PascalCase", "pascal-case", true));
-		assertThat(metadata.getItems()).hasSize(2);
+		assertThat(metadata).has(defaultAccess("PascalCase", "pascal-case", Access.UNRESTRICTED));
+		assertThat(metadata.getItems()).hasSize(3);
 	}
 
 	@Test
@@ -107,16 +147,18 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 		assertThat(metadata)
 			.has(Metadata.withGroup("management.endpoint.incremental").fromSource(IncrementalEndpoint.class));
 		assertThat(metadata).has(enabledFlag("incremental", true));
+		assertThat(metadata).has(access("incremental", Access.UNRESTRICTED));
 		assertThat(metadata).has(cacheTtl("incremental"));
-		assertThat(metadata.getItems()).hasSize(3);
+		assertThat(metadata.getItems()).hasSize(4);
 		project.replaceText(IncrementalEndpoint.class, "id = \"incremental\"",
 				"id = \"incremental\", enableByDefault = false");
 		metadata = project.compile();
 		assertThat(metadata)
 			.has(Metadata.withGroup("management.endpoint.incremental").fromSource(IncrementalEndpoint.class));
 		assertThat(metadata).has(enabledFlag("incremental", false));
+		assertThat(metadata).has(access("incremental", Access.NONE));
 		assertThat(metadata).has(cacheTtl("incremental"));
-		assertThat(metadata.getItems()).hasSize(3);
+		assertThat(metadata.getItems()).hasSize(4);
 	}
 
 	@Test
@@ -126,14 +168,16 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 		assertThat(metadata)
 			.has(Metadata.withGroup("management.endpoint.incremental").fromSource(IncrementalEndpoint.class));
 		assertThat(metadata).has(enabledFlag("incremental", true));
+		assertThat(metadata).has(access("incremental", Access.UNRESTRICTED));
 		assertThat(metadata).has(cacheTtl("incremental"));
-		assertThat(metadata.getItems()).hasSize(3);
+		assertThat(metadata.getItems()).hasSize(4);
 		project.replaceText(IncrementalEndpoint.class, "@Nullable String param", "String param");
 		metadata = project.compile();
 		assertThat(metadata)
 			.has(Metadata.withGroup("management.endpoint.incremental").fromSource(IncrementalEndpoint.class));
 		assertThat(metadata).has(enabledFlag("incremental", true));
-		assertThat(metadata.getItems()).hasSize(2);
+		assertThat(metadata).has(access("incremental", Access.UNRESTRICTED));
+		assertThat(metadata.getItems()).hasSize(3);
 	}
 
 	@Test
@@ -142,14 +186,16 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 		ConfigurationMetadata metadata = project.compile();
 		assertThat(metadata).has(Metadata.withGroup("management.endpoint.specific").fromSource(SpecificEndpoint.class));
 		assertThat(metadata).has(enabledFlag("specific", true));
+		assertThat(metadata).has(access("specific", Access.UNRESTRICTED));
 		assertThat(metadata).has(cacheTtl("specific"));
-		assertThat(metadata.getItems()).hasSize(3);
+		assertThat(metadata.getItems()).hasSize(4);
 		project.replaceText(SpecificEndpoint.class, "enableByDefault = true", "enableByDefault = false");
 		metadata = project.compile();
 		assertThat(metadata).has(Metadata.withGroup("management.endpoint.specific").fromSource(SpecificEndpoint.class));
 		assertThat(metadata).has(enabledFlag("specific", false));
+		assertThat(metadata).has(access("specific", Access.NONE));
 		assertThat(metadata).has(cacheTtl("specific"));
-		assertThat(metadata.getItems()).hasSize(3);
+		assertThat(metadata.getItems()).hasSize(4);
 	}
 
 	@Test
@@ -157,8 +203,9 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 		ConfigurationMetadata metadata = compile(SimpleEndpoint.class, SimpleEndpoint2.class);
 		assertThat(metadata).has(Metadata.withGroup("management.endpoint.simple").fromSource(SimpleEndpoint.class));
 		assertThat(metadata).has(enabledFlag("simple", "simple", true));
+		assertThat(metadata).has(defaultAccess("simple", "simple", Access.UNRESTRICTED));
 		assertThat(metadata).has(cacheTtl("simple"));
-		assertThat(metadata.getItems()).hasSize(3);
+		assertThat(metadata.getItems()).hasSize(4);
 	}
 
 	@Test
@@ -170,14 +217,26 @@ class EndpointMetadataGenerationTests extends AbstractMetadataGenerationTests {
 					"Existing property 'management.endpoint.simple.enabled' from type org.springframework.boot.configurationsample.endpoint.SimpleEndpoint has a conflicting value. Existing value: true, new value from type org.springframework.boot.configurationsample.endpoint.SimpleEndpoint3: false");
 	}
 
+	private Metadata.MetadataItemCondition enabledFlag(String endpointId, Boolean defaultValue) {
+		return enabledFlag(endpointId, endpointId, defaultValue);
+	}
+
 	private Metadata.MetadataItemCondition enabledFlag(String endpointId, String endpointSuffix, Boolean defaultValue) {
 		return Metadata.withEnabledFlag("management.endpoint." + endpointSuffix + ".enabled")
 			.withDefaultValue(defaultValue)
-			.withDescription(String.format("Whether to enable the %s endpoint.", endpointId));
+			.withDescription(String.format("Whether to enable the %s endpoint.", endpointId))
+			.withDeprecation(null, "management.endpoint.%s.access".formatted(endpointSuffix), "3.4.0");
 	}
 
-	private Metadata.MetadataItemCondition enabledFlag(String endpointId, Boolean defaultValue) {
-		return enabledFlag(endpointId, endpointId, defaultValue);
+	private Metadata.MetadataItemCondition access(String endpointId, Access defaultValue) {
+		return defaultAccess(endpointId, endpointId, defaultValue);
+	}
+
+	private Metadata.MetadataItemCondition defaultAccess(String endpointId, String endpointSuffix,
+			Access defaultValue) {
+		return Metadata.withAccess("management.endpoint." + endpointSuffix + ".access")
+			.withDefaultValue(defaultValue.name().toLowerCase(Locale.ENGLISH))
+			.withDescription("Permitted level of access for the %s endpoint.".formatted(endpointId));
 	}
 
 	private Metadata.MetadataItemCondition cacheTtl(String endpointId) {
